instead of the deprecated NNTP-Posting-Host: (when I<addinjectionpostinghost>
is set to true), X-Complaints-To: and X-Trace: headers.  Note that
I<addnntppostinghost> has been renamed to I<addinjectionpostinghost>
in F<inn.conf>.  The Path: header of locally posted articles now also
contains the contents of the NNTP-Posting-Host: header.

=item *

A few headers are now considered as obsolete by B<nnrpd> at injection
time:  NNTP-Posting-Date:, NNTP-Posting-Host:, X-Complaints-To:, X-Trace:,
Also-Control:, Article-Names:, Article-Updates:, and See-Also: headers.

Besides, B<nnrpd> will similarly reject obsolete sendsys, senduuname and
version control messages.

=item *

The presence of a Subject: header field beginning with C<cmsg > no longer
causes an article to be interpreted as a control message by B<nnrpd>
at injection time.

=item *

B<nnrpd> no longer differentiates IHAVE from POST.  Articles injected
with IHAVE are now treated as though they were injected with POST.
It means that if the previous behaviour of IHAVE was expected, B<innd>
should handle itself the connection instead of B<nnrpd>.

=item *

The name of the B<pullnews> configuration file is now F<pullnews.marks>
located in I<pathdb> when B<pullnews> is run as the news user, or
otherwise in the running user's home directory.  It was previously
stored in F<.pullnews> in the running user's home directory (even for
the news user).

=item *

Building with Libtool is no longer optional.  The B<--enable-libtool>
option to B<configure> has been removed.

=item *

When building INN with S<Berkeley DB>, Cyrus SASL, S<Kerberos
v5>, OpenSSL, or zlib support, no longer add standard locations to
compiler and linker include flags.  Such default paths are now added
only if explicitly given to one or more of the B<--with-bdb>,
B<--with-bdb-include>, B<--with-bdb-lib>, B<--with-sasl>,
B<--with-sasl-include>, B<--with-sasl-lib>, B<--with-krb5>,
B<--with-krb5-include>, B<--with-krb5-lib>, B<--with-openssl>,